# gradus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.changeset/: README.md
.github/workflows/: release.yml  test.yml
.semversioner/: 1.0.0.json  1.0.1.json  1.0.2.json  1.0.3.json  1.0.4.json  1.1.0.json  1.1.1.json  1.1.2.json
.semversioner/next-release/: minor-20260605184331570597.json  patch-20260605182640226921.json  patch-20260605190051838751.json  patch-20260605191447956503.json
documentation/: README.md  setup.md
documentation/curricula/: README.md
documentation/dataset-analyses/: cifar-10-analysis.ipynb  cifar-100-analysis.ipynb  mnist-analysis.ipynb
experiments/: baseline.sh  baselines.sh  random_shuffle.sh  weighted_saturation-time.sh  weighted_saturation-time_adaptive.sh  weighted_saturation-time_linear.sh
experiments/by-curriculum/: composite.sh  monotonic.sh  monotonic_saturation-time.sh  weighted_saturation-time.sh  weighted_wavelet-energy.sh
experiments/by-dataset/: cifar-10.sh  cifar-100.sh  imagenet.sh  mnist.sh
gradus/: __args__.py  __init__.py  __main__.py  __meta__.py  conftest.py
gradus/artifacts/: __init__.py  dataset_metrics.py  sample_complexity.py  train_record.py
gradus/commands/: __init__.py
gradus/configuration/: __init__.py  command_config.py  dataset_config.py  exceptions.py  metric_config.py  network_config.py  protocol.py
gradus/curricula/: __init__.py  protocol.py
gradus/datasets/: __init__.py  __test__.py  protocol.py
gradus/metrics/: __init__.py  color_variance.py  compression_ratio.py  convergence_time.py  edge_density.py  saturation_time copy.py  saturation_time.py  spatial_frequency.py  standard.py  types.py  utilities.py  wavelet.py  wavelet_energy.py  wavelet_entropy.py
gradus/networks/: __init__.py  autoencoder.py  cnn.py  protocol.py
gradus/ranks/: __init__.py  ascending.py
gradus/registration/: __init__.py  decorators.py
gradus/samplers/: batch_sampler.py  dataset_sampler.py
gradus/scheduling/: __init__.py
mustakin/: adaptive_pacing_plan.md  complexity_metrics.md  unsupervised_ranking.py
(+254 files in other folders)
